# ros2_experiments

./: .gitignore  README.md
cpp/src/benchmark_cpp/: CMakeLists.txt  package.xml
cpp/src/benchmark_cpp/receiver/: receiver.cpp  receiver.hpp
cpp/src/benchmark_cpp/sender/: sender.cpp
notes/actions/: actionServer_description.txt
python/#misc_tests/src/test01/: package.xml  setup.cfg  setup.py
python/#misc_tests/src/test01/main_program/: main_file.py
python/actions/src/test01/: package.xml  setup.cfg  setup.py
python/actions/src/test01/mini_action/: action_client_mini.py  action_server_mini.py
python/actions/src/test02/: package.xml  setup.cfg  setup.py
python/actions/src/test02/basic_classes/: action_client_wrapper.py  action_server_wrapper.py
python/actions/src/test02/basic_thread_classes/: action_client_wrapper_thread.py  action_server_wrapper_thread.py
python/actions/src/test02/mini_action_single_node_threads/: action_mini.py
python/actions/src/test03/: package.xml  setup.cfg  setup.py
python/actions/src/test03/basic_process_classes/: action_client_wrapper_process.py  action_server_wrapper_process.py
python/actions/src/test03/mini_action_multiple_nodes_processes/: action_mini.py
python/pub_sub/: clean.sh
python/pub_sub/src/ex01_single_pub_sub/: package.xml  setup.cfg  setup.py
python/pub_sub/src/ex01_single_pub_sub/basic_receiver/: basic_receiver.py
python/pub_sub/src/ex01_single_pub_sub/basic_sender/: basic_sender.py
python/pub_sub/src/ex02_multi_pub_sub/: package.xml  setup.cfg  setup.py
python/pub_sub/src/ex02_multi_pub_sub/multi_receiver/: multi_receiver.py
python/pub_sub/src/ex02_multi_pub_sub/multi_sender/: multi_sender.py
python/pub_sub/src/ex02_multi_pub_sub/utils/: channelAbs.py  constants.py
python/utils/: ros2_pypkg_create.py
