<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ex02_multi_pub_sub</name>
  <version>0.0.1</version>
  <description>Basic example with multiple senders and multiple receivers with round trip timing</description>
  <maintainer email="raffaele.grandi@gmail.com">RaffaeleGrandi</maintainer>
  <license>GPL</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
